--- a/css/styles.css
+++ b/css/styles.css
@@ -1955,7 +1955,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     height: 100%;
     /* max-width: 468px; */
     /* height: 100vh; */
-    padding: 32px;
+    /* padding: 32px; */
     background-color: var(--white-background);
     z-index: 999;
     
@@ -2059,12 +2059,11 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
  
   .mob-pages {
-    color: var(--hero-background);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    /* color: var(--hero-background);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);; */
   }
 
-  .mob-pages:hover, 
-  .mob-pages:focus {
+  .mob-pages {
     color: var(--primary_brand);
   }
 
@@ -2118,4 +2117,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   .top-menu {
     margin-bottom: auto;
+  }
+
+  .mobile-menu li:first-child .link.header-two {
+    color: var(--primary_brand);
   }
