--- a/css/styles.css
+++ b/css/styles.css
@@ -1358,7 +1358,7 @@ input {
     letter-spacing: 0.04em;
     padding-left: 16px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    width: 264px;
+    width: 100%;
     height: 40px;
     flex-shrink: 0;
     border-radius: 4px;
@@ -1367,6 +1367,16 @@ input {
     background-color: transparent;
     outline: transparent;
     color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+    .ftr-subscribe-field {
+        width: 100%;
+    }
+
+    .ftr-input {
+        width: 264px;
+    }
 }
 
 .ftr-input::placeholder {
@@ -1715,6 +1725,10 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 400;
     line-height: 0.875em;
     letter-spacing: 0.03em;
+}
+
+.ftr-subscribe-field {
+    width: 100%;
 }
 
 .modal-form-input {
