--- a/css/styles.css
+++ b/css/styles.css
@@ -97,8 +97,8 @@ input {
     }    
 }
 .container {
-    /* outline: 2px solid tomato;
-    outline-offset: -2px; */
+    outline: 2px solid tomato;
+    outline-offset: -2px;
 }
 
 /* Section Preferenses */
@@ -307,69 +307,6 @@ input {
     padding: 0 calc((100%)-320px);
 }
 
-/* Базові стилі і 1x зображення */
-.hero-image {
-    /* width: 320px;
-    height: 432px;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people_office_1.jpg');
-    background-size: cover; */
-}
-
-/* Перевизначаємо шлях до зображення
-   якщо щільність екрана як мінімум 2x */
-   /* @media (min-resolution: 192dpi) {
-    .hero-image {
-      background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people-office_1@2.jpg');
-      width: 100%;
-    height: 100%;
-    }
-  } */
-
-.hero-image {
-    /* width: 100%;
-    height: 100%;
-    padding: 112px 0;
-    background-color: var(--dark);
-    background-position: center;
-    background-size: cover;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
-    url(../images/people_office_1.jpg),
-    url(../images/people-office_1@2.jpg);
-    background-repeat: no-repeat;
-    } */
-    
-/* @media screen and (min-width: 768px) {
-    .hero-image {
-        max-height: 436px;
-        min-width: 768px;
-    }
-} */
-
-/* @media screen and (min-width: 1158px) {
-    .hero-image {
-        max-width: 1440px;
-        /* max-width: 1440px;
-        /* padding-top: 188px; */
-        /* padding-bottom: 188px;
-        padding-top: 188px;
-        margin: 0 auto; */
-    }
-} 
-
-.hero-image {
-    /* padding-top: 188px;
-    padding-bottom: 188px;
-    background-color: var(--dark);
-    background-position: center;
-    background-size: cover;
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
-    url(../images/people_office_1.jpg);
-    background-repeat: no-repeat;
-    margin: 0 auto;
-    min-width: 1440px;
-    max-width: 1440px; */
-}
-
 .hero-image {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -380,6 +317,13 @@ input {
     margin: 0 auto;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
     url(../images/people_mob@1x.jpg);
+}
+
+@media screen and (min-width: 1158px) {
+    .hero-image {
+        padding-top: 188px;
+        padding-bottom: 188px;
+    }
 }
 
 @media only screen and (max-width: 428px) (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -658,6 +602,12 @@ input {
     }
 }
 
+@media screen and (min-width: 1158px) {
+    .preferences-item {
+        margin-bottom: unset;
+    }
+}
+
 .header-preferences {
     text-align: left;
 }
@@ -673,6 +623,7 @@ input {
         display: flex;
         flex-wrap: wrap;
         column-gap: 24px;
+        row-gap: 72px;
     } 
 
     .preferences-item {
@@ -917,20 +868,23 @@ input {
 }
 
 .customers-item {
-        max-width: calc((100% - 16px) / 2);
+        /* max-width: calc((100% - 16px) / 2); */
         height: 88px;
+        width: calc((100% - 16px) / 2);
     }
 
 @media screen and (min-width: 428px) {
     .customers-item {
-        max-width: calc((100% - 16px) / 2);
-        min-width: 190px;
+        width: calc((100% - 16px) / 2);
+        /* max-width: calc((100% - 16px) / 2);
+        min-width: 190px; */
     }
 }
 
 @media screen and (min-width: 768px) {
     .customers-item {
-        max-width: calc((100% - 48px) / 3);
+        width: calc((100% - 48px) / 3);
+        /* max-width: calc((100% - 48px) / 3); */
     }
 }
 
@@ -988,6 +942,7 @@ input {
 
 .customers-link {
     width: calc(100% - 16px);
+    margin: 0 auto;
 }
 
 .customers-link {
@@ -1010,6 +965,13 @@ input {
 @media screen and (min-width: 768px) {
     .customers-link {
         width: 168px;
+        /* margin: 0; */
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .customers-link {
+        margin: 0;
     }
 }
 
@@ -1971,8 +1933,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms ease-in-out;
     display: flex;
     flex-direction: column;
-    /* outline: 2px solid tomato;
-    outline-offset: -2px; */
+    outline: 2px solid tomato;
+    outline-offset: -2px;
   }
 
   @media only screen and (max-width: 767px) {
