--- a/css/styles.css
+++ b/css/styles.css
@@ -165,12 +165,17 @@ input {
     color: var(--text);
 }
 
+.address-contacts-link {
+    color: var(--dark);
+    margin: 0;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1157px) {
 
     .address-contacts {
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        /* gap: 12px; */
         /* font-size: 12px; */
     }
 
