--- a/css/styles.css
+++ b/css/styles.css
@@ -1967,7 +1967,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms ease-in-out;
     display: flex;
     flex-direction: column;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
     outline-offset: -2px;
   }
 
